--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@ app/storage/
 # Laravel 5 & Lumen specific
 public/storage
 public/hot
+public/js
+public/css
+.idea/
 storage/*.key
 .env
 Homestead.yaml
